# akio-mobile

./: README.md  pubspec.yaml  pyproject.toml  run_server.py
.github/workflows/: test-python-server.yml
android/app/: build.gradle
flask_server/: __init__.py  authentication.py  models.py  responses.py  test.db  validation_schemas.py  validation_schemes.py  views.py
flutter_app/: pubspec.yaml
flutter_app/android/app/: build.gradle
flutter_app/ios/Runner/: Info.plist
flutter_app/ios/Runner.xcodeproj/: project.pbxproj
flutter_app/lib/: alert_box.dart  api.dart  device_info.dart  main.dart  state.dart  themes.dart
flutter_app/lib/api/: api.dart
flutter_app/lib/collections/: collection_item.dart  collections_page.dart
flutter_app/lib/home_page/: home_page.dart  main_page.dart
flutter_app/lib/login_page/: login_page.dart
flutter_app/lib/photo_feed/: create_post_dialog.dart  post.dart  (+1 more)
flutter_app/web/: index.html
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: device_info.dart  main.dart  themes.dart
lib/collections/: collections_page.dart
lib/home_page/: home_page.dart
lib/photo_feed/: photo_feed_page.dart  post.dart
lib/profile/: profile_page.dart
lib/scan_item/: scan_item_page.dart
server/: Dockerfile  pyproject.toml  run_server.py
server/flask_server/: __init__.py  app.py  authentication.py  models.py  responses.py  util.py  validation_schemas.py  views.py
server/migrations/versions/: 62dbd1f68f6a_.py
server/tests/: conftest.py  test_main.py
test/: widget_test.dart
web/: index.html  manifest.json
(+9 files in other folders)
