[tool.poetry]
name = "flask_server"
version = "0.1.0"
description = "Server for akio mobile app"
authors = ["."]

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^2.1.2"
pydantic = "^1.9.1"
Flask-SQLAlchemy = "^2.5.1"
Flask-Bcrypt = "^1.0.1"
Flask-Cors = "^3.0.10"
Flask-Migrate = "^3.1.0"
PyJWT = "^2.4.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
